# chest-xray-pneumonia-classifier

./: .gitignore  .replit  LICENSE  README.md  netlify.toml  pnpm-lock.yaml  pyproject.toml
artifacts/mockup-sandbox/: vite.config.ts
artifacts/mockup-sandbox/.netlify/plugins/: package-lock.json
artifacts/pneumoscan/: index.html  package.json  vite.config.ts
artifacts/pneumoscan/.replit-artifact/: artifact.toml
artifacts/pneumoscan/src/: index.css
artifacts/pneumoscan/src/components/features/: UploadAnalyzer.tsx
artifacts/pneumoscan/src/components/layout/: DisclaimerBanner.tsx  Footer.tsx  Navbar.tsx
artifacts/pneumoscan/src/components/sections/: About.tsx  Hero.tsx  HowItWorks.tsx  ModelPerformance.tsx  SampleImages.tsx
artifacts/pneumoscan/src/lib/: api.ts  export-pdf.ts
artifacts/pneumoscan/src/pages/: home.tsx  not-found.tsx
attached_assets/: Pasted-Build-a-professional-modern-medical-AI-web-app-called-P_1781352624666.txt  Pasted-Polish-this-PneumoScan-AI-website-to-a-production-ready_1781361646455.txt  mlflow_1781301575031.db
chest-xray-detection/: .dockerignore  Dockerfile  README.md  app.py  cli.py  compare_gradcam.py  config.py  dataset.py  demo.py  download_dataset.py  evaluate.py  export.py  gradcam.py  model.py  predict.py  pyproject.toml  report.py  requirements.txt  status.py  test_api.py  train.py  verify_dataset.py  visualize_results.py
chest-xray-detection/chest_xray_pneumonia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
