[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "chest-xray-pneumonia"
version         = "1.0.0"
description     = "Chest X-Ray Pneumonia Detection — DenseNet121 + FastAPI"
requires-python = ">=3.10"

# Runtime dependencies (mirrors requirements.txt)
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=9.0.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "mlflow>=2.0.0",
    "grad-cam>=1.4.0",
    "torchinfo>=1.7.0",
    "seaborn>=0.12.0",
    "opencv-python-headless>=4.5.0",
    "reportlab>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "requests>=2.28.0",
    "kaggle>=1.5.0",
]

# ── CLI commands ──────────────────────────────────────────────────────────────
# After `pip install -e .`, these become shell commands available anywhere.
# Each entry maps  command-name = "module:function".

[project.scripts]
xray-download  = "cli:download"
xray-train     = "cli:train"
xray-evaluate  = "cli:evaluate"
xray-predict   = "cli:predict"
xray-visualize = "cli:visualize"
xray-gradcam   = "cli:gradcam"
xray-compare   = "cli:compare"
xray-report    = "cli:report"
xray-export    = "cli:export"
xray-serve     = "cli:serve"
xray-test-api  = "cli:test_api"
xray-demo      = "cli:demo"

# ── Package discovery ─────────────────────────────────────────────────────────
# All .py files in this directory are treated as top-level modules.

[tool.setuptools]
py-modules = [
    "cli",
    "config",
    "model",
    "dataset",
    "train",
    "evaluate",
    "predict",
    "gradcam",
    "compare_gradcam",
    "visualize_results",
    "report",
    "export",
    "app",
    "test_api",
    "demo",
    "download_dataset",
]
